@@ -13,6 +13,7 @@ Version 2.2.2
    - Updated Vietnamese translation (thanks to Clytie Siddall)
    - Feature: Three new options for filtering messages via regular expressions
         (feature request #1493670 by sunyata and others)
+   - Cleanup: Substituted static mutex for popup by regular mutex
 
 Version 2.2.1		2006-05-14 20:08
  * Robert Sowada
